# static_analyze

./: .gitignore  README.html  README.md  pyproject.toml
.obsidian/: workspace.json
data/: model_list.json  module_readmes.json
data/module_info/: adc_ctrl.json  aes.json  aon_timer.json  ascon.json  csrng.json  edn.json  entropy_src.json  gpio.json  hmac.json  i2c.json  keymgr.json  kmac.json  lc_ctrl.json  lowrisc_ibex.json  otbn.json  otp_ctrl.json  pattgen.json  pinmux.json  prim.json  prim_generic.json  pwm.json  rom_ctrl.json  rv_core_ibex.json  rv_dm.json  rv_timer.json  spi_device.json  spi_host.json  sram_ctrl.json  sysrst_ctrl.json  tlul.json  top_earlgrey.json  top_earlgrey_alert_handler.json  top_earlgrey_ast.json  top_earlgrey_clkmgr.json  top_earlgrey_flash_ctrl.json  top_earlgrey_pinmux.json  top_earlgrey_pwrmgr.json  top_earlgrey_rstmgr.json  top_earlgrey_rv_plic.json  top_earlgrey_sensor_ctrl.json  (+5 more)
reports/gemini-2.5-pro/hmac/: hmac_reg_top_report.json
results/gemini-2.5-pro/adc_ctrl/: adc_ctrl_fsm.sv.json
results/gemini-2.5-pro/aes/: aes_cipher_core.sv.json  aes_core.sv.json  aes_reg_top.sv.json
results/gemini-2.5-pro/csrng/: csrng_reg_top.sv.json
results/gemini-2.5-pro/entropy_src/: entropy_src.sv.json  entropy_src_ack_sm.sv.json  (+16 more)
results/legacy_output/: aes.md  gpio.md  hmac.json  hmac.md  hmac_claude.json  keymgr_claude.json  lc_ctrl.md  otbn.md  otp_ctrl152.md  otp_ctrl325.md  test.md
src/: agent1.py  agent2.py  agent3.py  ast_test.ipynb  ast_tools.py  autosubmit.py  dependency_tools.py  file_tools.py  rag.py  report.py
(+25 files in other folders)
