[project]
name = "static-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.13.0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "ipynb>=0.5.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "playwright>=1.54.0",
    "unstructured[md]>=0.18.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
